fixed collapsing track list item height in album view; code formatting;

--- a/src/views/album-view.sass
+++ b/src/views/album-view.sass
@@ -2,10 +2,12 @@
   flex: 1
   display: flex
   flex-direction: column
+  overflow: hidden
 
   .albumWrapper
     display: flex
     flex: 1
+    overflow: hidden
 
     .albumInfo
       display: flex
@@ -67,16 +69,19 @@
       flex-direction: column
       flex: 3
       padding: 20px
+      overflow-y: auto
 
       .discWrapper
         display: flex
+        flex-shrink: 0
         flex-direction: column
         border-radius: 2px
-        overflow: hidden
 
         .trackWrapper
           display: flex
           cursor: pointer
+          height: 40px
+          align-items: center
 
           background-color: rgb(40, 40, 40)
 
